# odysseus-nix

./: Handoff.md  LICENSE  README.md  default.nix  flake.nix  module.nix  package.nix  pyproject.toml  requirements.in  update.sh
npins/: sources.json
