[project]
name = "odysseus"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.15.0",
    "caldav>=3.2.1",
    "charset-normalizer>=3.4.7",
    "chromadb-client>=1.5.9",
    "croniter>=6.2.2",
    "cryptography>=49.0.0",
    "fastapi>=0.137.2",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "huggingface-hub>=1.19.0",
    "icalendar>=7.1.3",
    "markdown>=3.10.2",
    "mcp>=1.28.0",
    "nh3>=0.3.5",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyotp>=2.10.0",
    "pypdf>=6.13.3",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper>=1.2.1",
]
duckduckgo = [
    "ddgs>=9.14.4",
]
mupdf = [
    "pymupdf>=1.27.2.3",
]
markitdown = [
    "markitdown[docx,pptx,xls,xlsx]==0.1.6",
]
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
